--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "songspere-api",
+  "name": "songsphere-api",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.ts",
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "google-auth-library": "^8.7.0"
+    "google-auth-library": "^8.7.0",
+    "mongoose": "^6.9.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
