--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node ./dist/app.js",
     "dev": "nodemon ./app.ts",
-    "test": "jest"
+    "test": "jest",
+    "test watch": "jest --watchAll --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
