--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,12 @@
   "name": "songsphere-api",
   "version": "1.0.0",
   "description": "",
-  "main": "src/app.ts",
+  "main": "index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/app.js",
-    "dev": "nodemon ./app.ts",
-    "test": "jest",
-    "test watch": "jest --watchAll --detectOpenHandles"
+    "start": "node ./dist/index.js",
+    "dev": "nodemon ./index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -27,7 +26,9 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
+    "@types/supertest": "^2.0.12",
     "jest": "^29.4.2",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
