--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -41,6 +42,8 @@
     ]
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
+    "musickit-typescript": "^1.2.4",
     "tailwindcss": "^3.2.6"
   }
 }
