--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,7 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "typeRoots": ["node_modules/musickit-typescript", "node_modules/@types"]
   },
   "include": ["src", "src/services", "src/components"]
 }
