--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,8 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "typeRoots": ["node_modules/musickit-typescript", "node_modules/@types"]
+    "jsx": "react-jsx"
   },
   "include": ["src", "src/services", "src/components"]
 }
