--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-auth-library": "^8.7.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "mongoose": "^6.9.1"
   },
   "devDependencies": {
     "@types/connect-mongodb-session": "^2.4.4",
@@ -31,7 +29,6 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.6",
     "@types/jest": "^29.4.0",
-    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.13.0",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.2",
