added route, database function calls, continued working on client side auth.

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,6 +12,6 @@
       "*": ["node_modules/*"]
     }
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "../client/src/services/spotify-link.ts"],
   "exclude": ["node_modules"]
 }
