--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "react-router-dom": "^6.8.1",
     "tailwindcss": "^3.2.6"
   }
 }
