--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "NODE_ENV=production tsc",
     "start": "node ./dist/index.js",
     "dev": "nodemon ./index.ts",
     "test": "jest"
