--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.3",
     "google-auth-library": "^8.7.0",
     "mongoose": "^6.9.1",
+    "nodemon": "^2.0.20",
     "qs": "^6.11.0",
     "querystring": "^0.2.1"
   },
