--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
+    "react-spotify-web-playback-sdk": "^3.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -43,11 +44,11 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/react-helmet": "^6.1.6",
     "@types/styled-components": "^5.1.26",
     "musickit-typescript": "^1.2.4",
-    "@tailwindcss/typography": "^0.5.9",
     "react-router-dom": "^6.8.1",
     "tailwindcss": "^3.2.6"
   }
