--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,11 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/spotify-web-playback-sdk": "^0.1.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
-    "react-spotify-web-playback-sdk": "^3.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
