--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^5.10.5",
     "@react-oauth/google": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "@types/spotify-web-playback-sdk": "^0.1.15",
+    "axios": "^1.3.4",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^4.7.3",
     "react-helmet": "^6.1.0",
     "react-image-crop": "^10.0.9",
     "react-scripts": "5.0.1",
