--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "FileReader": "^0.10.2",
     "google-auth-library": "^8.7.0",
     "mongoose": "^6.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "qs": "^6.11.0",
     "querystring": "^0.2.1"
@@ -33,6 +35,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.6",
     "@types/jest": "^29.4.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.13.0",
     "@types/supertest": "^2.0.12",
     "jest": "^29.4.2",
