--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/spotify-web-playback-sdk": "^0.1.15",
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
+    "css-loader": "^6.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.7.3",
