--- a/server/package.json
+++ b/server/package.json
@@ -22,10 +22,13 @@
     "express-session": "^1.17.3",
     "FileReader": "^0.10.2",
     "google-auth-library": "^8.7.0",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^6.9.1",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
+    "postmark": "^3.0.15",
     "qs": "^6.11.0",
     "querystring": "^0.2.1"
   },
