--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trycourier/courier": "^4.2.0",
     "axios": "^1.3.4",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
